adding Math handler