@@ -1142,16 +1142,16 @@ public class Parser {
 		if (number.length() > 2 && number.charAt(0) == '0' && (number.charAt(1) == 'x' || number.charAt(1) == 'X')) {
 			long l = Long.parseLong(number.substring(2), 16);
 			if (l < Integer.MAX_VALUE) {
-				return new Integer((int) l);
+				return Integer.valueOf((int) l);
 			} else {
-				return new Long(l);
+				return Long.valueOf(l);
 			}
 		} else if (number.indexOf('.') < 0 && number.indexOf('e') < 0 && number.indexOf('E') < 0) {
 			long l = Long.parseLong(number, 10);
 			if (l < Integer.MAX_VALUE) {
-				return new Integer((int) l);
+				return Integer.valueOf((int) l);
 			} else {
-				return new Long(l);
+				return Long.valueOf(l);
 			}
 		} else {
 			return Double.parseDouble(number);
